[gd_scene load_steps=8 format=3 uid="uid://duwlsjo3tu4c2"]

[ext_resource type="ButtonGroup" uid="uid://b7cntinidkmhs" path="res://barkley2/resources/quick_meny/left_gun_button_group.tres" id="1_fm2ii"]
[ext_resource type="Script" uid="uid://d3uol78gddlv7" path="res://barkley2/scenes/Objects/System/_quick_menu/gun_btn.gd" id="1_qu8sk"]
[ext_resource type="FontFile" uid="uid://dre1af5ictbg8" path="res://barkley2/resources/fonts/fn_7ocs.tres" id="2_25fmr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cjj0v"]
bg_color = Color(0, 0, 0, 1)
border_width_top = 1
border_width_bottom = 1
border_color = Color(1, 1, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qe3hf"]
bg_color = Color(0, 0, 0, 1)
border_width_top = 1
border_width_bottom = 1
border_color = Color(1, 0.647059, 0, 1)

[sub_resource type="Theme" id="Theme_ynjmg"]
Button/styles/focus = SubResource("StyleBoxFlat_cjj0v")
Button/styles/hover = SubResource("StyleBoxFlat_cjj0v")
Button/styles/normal = SubResource("StyleBoxFlat_qe3hf")
Button/styles/pressed = SubResource("StyleBoxFlat_cjj0v")

[sub_resource type="LabelSettings" id="LabelSettings_3hw23"]
font = ExtResource("2_25fmr")

[node name="gun_btn" type="Button"]
clip_contents = true
custom_minimum_size = Vector2(100, 16)
theme = SubResource("Theme_ynjmg")
toggle_mode = true
button_group = ExtResource("1_fm2ii")
script = ExtResource("1_qu8sk")

[node name="gun_name" type="Label" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 3.0
offset_right = 47.0
offset_bottom = 12.0
text = "Teste"
label_settings = SubResource("LabelSettings_3hw23")

[node name="gun_ammo" type="Label" parent="."]
layout_mode = 0
offset_left = 62.0
offset_top = 3.0
offset_right = 102.0
offset_bottom = 12.0
text = "420"
label_settings = SubResource("LabelSettings_3hw23")

[node name="gun_weight" type="Label" parent="."]
layout_mode = 0
offset_left = 84.0
offset_top = 3.0
offset_right = 124.0
offset_bottom = 12.0
text = "69"
label_settings = SubResource("LabelSettings_3hw23")

[node name="pts_title" type="Label" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 16.0
offset_right = 48.0
offset_bottom = 25.0
text = "PTS"
label_settings = SubResource("LabelSettings_3hw23")

[node name="dmg_title" type="Label" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 16.0
offset_right = 66.0
offset_bottom = 25.0
text = "DMG"
label_settings = SubResource("LabelSettings_3hw23")

[node name="rte_title" type="Label" parent="."]
layout_mode = 0
offset_left = 47.0
offset_top = 16.0
offset_right = 87.0
offset_bottom = 25.0
text = "RTE"
label_settings = SubResource("LabelSettings_3hw23")

[node name="spc_title" type="Label" parent="."]
layout_mode = 0
offset_left = 65.0
offset_top = 16.0
offset_right = 105.0
offset_bottom = 25.0
text = "SPC"
label_settings = SubResource("LabelSettings_3hw23")

[node name="cap_title" type="Label" parent="."]
layout_mode = 0
offset_left = 84.0
offset_top = 16.0
offset_right = 124.0
offset_bottom = 25.0
text = "CAP"
label_settings = SubResource("LabelSettings_3hw23")

[node name="pts_value" type="Label" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 26.0
offset_right = 48.0
offset_bottom = 35.0
text = "20"
label_settings = SubResource("LabelSettings_3hw23")

[node name="dmg_value" type="Label" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 26.0
offset_right = 66.0
offset_bottom = 35.0
text = "20"
label_settings = SubResource("LabelSettings_3hw23")

[node name="rte_value" type="Label" parent="."]
layout_mode = 0
offset_left = 47.0
offset_top = 26.0
offset_right = 87.0
offset_bottom = 35.0
text = "20"
label_settings = SubResource("LabelSettings_3hw23")

[node name="spc_value" type="Label" parent="."]
layout_mode = 0
offset_left = 65.0
offset_top = 26.0
offset_right = 105.0
offset_bottom = 35.0
text = "20"
label_settings = SubResource("LabelSettings_3hw23")

[node name="cap_value" type="Label" parent="."]
layout_mode = 0
offset_left = 84.0
offset_top = 26.0
offset_right = 124.0
offset_bottom = 35.0
text = "20"
label_settings = SubResource("LabelSettings_3hw23")

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="toggled" from="." to="." method="_on_toggled"]
